--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Feed the Animal</string>
+    <string name="product_id_animal_horse">animal_horse</string>
+    <string name="product_id_animal_reindeer">animal_reindeer</string>
+    <string name="product_id_animal_zebra">animal_zebra</string>
 </resources>
